--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -26,13 +26,25 @@
   <div class="form-group">
     <%= f.label :datum, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.date_field :date, class: 'form-control' %>
+      <%= f.date_field :date, required: true, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :voorzitter, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :chairman_id, User.intern.collect {|x| [x.name, x.id]}, include_blank: true %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :notulist, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :secretary_id, User.intern.collect {|x| [x.name, x.id]}, include_blank: true %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :aanwezigen, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.select :user_ids, User.intern.collect { |x| [x.name, x.id] }, {}, multiple: true %>
+      <%= f.select :user_ids, User.intern.collect {|x| [x.name, x.id]}, {}, multiple: true %>
     </div>
   </div>
   <div class="actions">
