--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -222,8 +222,7 @@ table.events thead tr th, table.tablesorter tfoot tr th {
   transition: none;
 }
 
-#event-info-panel,
-#meeting-info-panel {
+.info-panel {
   .small-profile-picture {
     width: 56px;
     height: 56px;
