--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,7 +19,7 @@
       <% end %>
     </p>
   </div>
-  <div id="event-info-panel" class="col-md-4">
+  <div class="col-md-4 info-panel">
     <div class="panel panel-default">
       <div class="panel-body">
         <% if @event.attendance %>
