Keep track of meeting attendees (#80)
* Change models and add migration

* Improve models and migration

* Fix saving of attendees

* Show attendees on meetings/show

* Show date of meeting on meeting/show page

* Cleanup

* Only show internal users in meeting attendee form

* Some stylesheet fixes

* user.meetings --> user.meetings_attended

* Revert @

* Complete implementation

* Improve display of user images

* Feedback

* ID -> class

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -9,16 +9,31 @@
       <%= @meeting.actiontext_notes %>
     <% end %>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 info-panel">
     <div class="panel panel-default">
       <div class="panel-body">
+        <p><b>Datum:</b> <%= @meeting.date.strftime('%d-%m-%Y') %></p>
+
         <% if @meeting.user_id %>
-          <p>Genotuleerd door: <b><%= link_to @notulist.name, @notulist %></b></p>
-          <hr>
+          <p><b>Genotuleerd door:</b> <%= link_to @notulist.name, @notulist %></p>
         <% end %>
+
+        <hr>
+
         <h2>Agenda <%= @meeting.onderwerp %></h2>
         <%= markdown(@meeting.agenda).html_safe if @meeting.agenda %>
         <hr>
+
+        <% if @meeting.attendees.any? %>
+          <h4>Aanwezigen <span class="text-muted small"><%= @meeting.attendees.count %></span></h4>
+          <div class="clearfix">
+            <% @meeting.attendees.each do |a| %>
+              <%= link_to gravatar_for(a.user), a.user, class: "small-profile-picture" %>
+            <% end %>
+          </div>
+          <hr>
+        <% end %>
+
         <% if current_user.admin? %>
           <td>
             <div class="btn-group btn-group-vertical btn-group-sm">
