--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -221,3 +221,15 @@ table.events thead tr th, table.tablesorter tfoot tr th {
   border: none;
   transition: none;
 }
+
+.info-panel {
+  .small-profile-picture {
+    width: 56px;
+    height: 56px;
+    margin-bottom: 4px;
+
+    .gravatar {
+      margin: 2px;
+    }
+  }
+}
