--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @meeting, html: {id: 'meeting-form', class: 'form-horizontal'} do |f| %>
+<%= form_for @meeting, html: {class: 'meeting-form form-horizontal'} do |f| %>
   <% if @meeting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this meeting from being saved:</h2>
@@ -27,6 +27,12 @@
     <%= f.label :datum, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.date_field :date, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :aanwezigen, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :user_ids, User.intern.collect { |x| [x.name, x.id] }, {}, multiple: true %>
     </div>
   </div>
   <div class="actions">
