Display amount of meetings attended

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,6 +54,10 @@
           <td><%= @user.blogitems.count %></td>
         </tr>
         <tr>
+          <td>Aantal vergaderingen bijgewoond</td>
+          <td><%= @user.meetings_attended.count %></td>
+        </tr>
+        <tr>
           <td>Aantal vergaderingen voorgezeten</td>
           <td><%= @user.meetings_chaired.count %></td>
         </tr>
