--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -1,50 +1,39 @@
 <% content_for :title do %>
   Groepen
+  <% if current_user.admin? %>
+    <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#createGroupModal">
+      Nieuwe groep
+    </button>
+
+    <div class="modal fade" id="createGroupModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Nieuwe groep aanmaken</h4>
+          </div>
+          <div class="modal-body">
+            <% if current_user.admin? %>
+              <%= form_for @group, html: {id: 'usergroup-form', class: 'form-inline'} do |f| %>
+                <%= render 'shared/error_messages', object: f.object %>
+                <%= f.text_field :name, placeholder: 'Naam', class: 'form-control' %>
+                <%= f.submit 'Opslaan', class: 'btn btn-default' %>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 <% end %>
 
 <div class="row">
-  <div class="col-md-5">
-    <% @usergroups.each do |group| %>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h1 class="panel-title">
-            <%= group.name %>
-            <span class="text-muted text-small"><%= group.users.count %></span>
-            <% if group.users.any? %>
-              <button class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top"
-                      title="De groep moet leeg zijn voor je deze kunt verwijderen.">
-                <i class="far fa-trash-alt"></i>
-              </button>
-            <% elsif [4, 5, 12].include?(group.id) %>
-              <button class="btn btn-default btn-sm disabled">Deze groep kan niet verwijderd worden</button>
-            <% else %>
-              <%= link_to group, method: :delete, data: {confirm: 'Weet je het zeker?'}, class: 'btn btn-default btn-sm' do %>
-                <i class="far fa-trash-alt"></i> Verwijder groep
-              <% end %>
-            <% end %>
-          </h1>
-        </div>
-        <div class="panel-body">
-          <ul>
-            <% group.users.each do |user| %>
-              <li><%= user.name %></li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    <% end %>
-  </div>
-
-  <div class="col-md-3"></div>
-
-  <div class="col-md-4">
-    <h4>Nieuwe groep aanmaken</h4>
-    <% if current_user.admin? %>
-      <%= form_for @group, html: {id: 'usergroup-form', class: 'form-inline'} do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <%= f.text_field :name, placeholder: 'Groepnaam', class: 'form-control' %>
-        <%= f.submit 'Opslaan', class: 'btn btn-default' %>
+  <div class="col-md-12">
+    <div class="row">
+      <% @usergroups.each do |group| %>
+        <%= render "usergroups/group", group: group %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
