Load bootstrap-select with yarn

--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -1,2 +1,3 @@
 @import '~bootstrap/dist/css/bootstrap';
 @import '~flatpickr/dist/flatpickr';
+@import '~bootstrap-select/dist/css/bootstrap-select';
