--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -1,4 +1,4 @@
-<table id="user" class="tablesorter table table-hover">
+<table class="tablesorter table table-hover">
   <thead>
   <tr>
     <th>Naam</th>
