--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -1,1 +1,4 @@
-@import "~flatpickr/dist/flatpickr";
+@import '~bootstrap/dist/css/bootstrap';
+@import '~flatpickr/dist/flatpickr';
+@import '~bootstrap-select/dist/css/bootstrap-select';
+@import '~tablesort/tablesort';
