--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -46,6 +46,6 @@
   <div class="center jumbotron">
     <h1>Hamers zonder Sikkel</h1>
     <h2>defenestraties voorbehouden</h2>
-    <b>Email: hamers [at] current domain name</b>
+    <b>Email: hamers [at] domeinnaam</b>
   </div>
 <% end %>
