Display time of log item

--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -10,18 +10,20 @@
       <% if t.event == "create" %>
         <% if t.item_type == "Signup" %>
           heeft zich ingeschreven voor <%= link_to t.item.event.title, t.item.event %>
+        <% else %>
+          created <%= link_to t.item_type, t.item %>
+        <% end %>
+      <% elsif t.event == "destroy" %>
+        destroyed <%= t.item_type %>
       <% else %>
-        created <%= link_to t.item_type, t.item %>
-    <% end %>
-  <% elsif t.event == "destroy" %>
-    destroyed <%= t.item_type %>
-<% else %>
-  <% if t.item_type == "Signup" %>
-    heeft zijn inschrijving voor <%= link_to t.item.event.title, t.item.event %> geupdate
-  <% else %>
-    <%= t.event %>d <%= link_to t.item_type, t.item %>
-  <% end %>
-<% end %>
+        <% if t.item_type == "Signup" %>
+          heeft zijn inschrijving voor <%= link_to t.item.event.title, t.item.event %> geupdate
+        <% else %>
+          <%= t.event %>d <%= link_to t.item_type, t.item %>
+        <% end %>
+      <% end %>
+
+    <small class="text-muted">&hyphen; <%= t.created_at.strftime('%d-%m-%Y %H:%M') %></small>
     </li>
   <% end %>
 </ul>
