--- a/app/views/public_pages/_form.html.erb
+++ b/app/views/public_pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_for(@public_page) do |f| %>
+<%= form_for(@public_page) do |f| %>
     <% if @public_page.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@public_page.errors.count, 'error') %> prohibited this public_page from being saved:</h2>
