--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -1,8 +1,3 @@
-  <ul class='breadcrumb'>
-    <% breadcrumb_trail do |crumb| %>
-      <li class="<%= crumb.current? ? 'current' : '' %>">
-        <%= link_to crumb.name, crumb.url, (crumb.current? ? {'aria-current' => 'page'} : {}) %>
-      </li>
-    <% end %>
-  </ul>
-
+<%= breadcrumb_trail.map do |crumb| %>
+  <% crumb.name %>
+<% end.join(" -> ") %>
