--- a/app/views/static_pages/frontpage.html.erb
+++ b/app/views/static_pages/frontpage.html.erb
@@ -1,4 +1,4 @@
-<main class="mt-16 mx-auto max-w-7xl px-4 sm:mt-24">
+<main class="mx-auto my-64 max-w-7xl px-4">
   <div class="text-center">
     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
       <span class="block text-indigo-600 xl:inline">Hamers zonder Sikkel</span>
