--- a/app/views/layouts/application-public.html.erb
+++ b/app/views/layouts/application-public.html.erb
@@ -18,6 +18,7 @@
   <% if content_for?(:title) %>
     <div class="row">
       <div class="col-md-12 text-center">
+        <%= yield %>
       </div>
     </div>
   <% end %>
