--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div class="container mx-auto">
       <% flash.each do |key, value| %>
         <% if key == "notice" %>
           <% key = "info" %>
