Tailwindify register page

--- a/app/views/layouts/application_public.html.erb
+++ b/app/views/layouts/application_public.html.erb
@@ -15,9 +15,9 @@
   <%= render 'layouts/alert' %>
 
   <% if content_for?(:title) %>
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <%= yield %>
+    <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
+      <div class="text-center">
+        <h1 class="text-4xl font-semibold text-gray-900 lg:text-5xl"><%= yield :title %></h1>
       </div>
     </div>
   <% end %>
