Use root_url in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="bg-white">
   <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
     <p class="text-center text-base text-gray-400">
-      <a href="https://zondersikkel.nl/">Hamers zonder Sikkel</a> <br>
+      <a href="<%= root_url %>">Hamers zonder Sikkel</a> <br>
       &copy; <%= Time.current.year %> - version <%= "#{`git rev-list HEAD --count`} (#{`git rev-parse --short HEAD`.chomp})" %>
     </p>
   </div>
