--- a/app/views/layouts/_small_width.html.erb
+++ b/app/views/layouts/_small_width.html.erb
@@ -1,5 +1,3 @@
-<div class="row">
-  <div class="col-md-4 col-md-offset-4">
-    <%= yield %>
-  </div>
-</div>
+<main class="mx-auto items-center justify-center my-16 max-w-lg py-12 px-4 sm:px-6 lg:px-8">
+  <%= yield %>
+</main>
