--- a/app/views/static_pages/activate_account.html.erb
+++ b/app/views/static_pages/activate_account.html.erb
@@ -2,7 +2,7 @@
   Account activeren
 <% end %>
 
-<main class="mx-auto items-center justify-center mt-16 mb-32 max-w-md w-full py-12 px-4 sm:px-6 lg:px-8">
+<%= render layout: 'layouts/small_width' do %>
   <%= form_for "", :url => "users/invitation/accept", html: { :method => :get } do |f| %>
     <div class="relative rounded-md shadow-sm">
       <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
@@ -12,4 +12,4 @@
     </div>
     <%= f.button "Registreer", type: 'submit', class: "w-full justify-center inline-flex items-center px-4 py-2 mt-4 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
   <% end %>
-</main>
+<% end %>
