Display Hamerslogo on frontpage

--- a/app/views/static_pages/frontpage.html.erb
+++ b/app/views/static_pages/frontpage.html.erb
@@ -1,5 +1,8 @@
-<main class="mx-auto my-64 max-w-7xl px-4">
+<main class="mx-auto my-48 max-w-7xl px-4">
   <div class="text-center">
+
+    <img class="mx-auto mb-24 w-48" src="<%= image_path('logo_transparant_background.png') %>" alt="Hamers logo">
+
     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
       <span class="block text-indigo-600 xl:inline">Hamers zonder Sikkel</span>
     </h1>
