--- a/app/views/layouts/_debug.html.erb
+++ b/app/views/layouts/_debug.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-gray-200 overflow-hidden rounded-lg">
+<div class="my-8 bg-gray-200 overflow-hidden rounded-lg">
   <div class="px-4 py-5 sm:p-6">
     <%= debug(params) %>
   </div>
