--- a/app/views/static_pages/frontpage.html.erb
+++ b/app/views/static_pages/frontpage.html.erb
@@ -4,7 +4,7 @@
     <img class="mx-auto mb-24 w-48" src="<%= image_path('logo_transparant_background.png') %>" alt="Hamers logo">
 
     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-      <span class="block text-hamers-yellow-500 xl:inline">Hamers zonder Sikkel</span>
+      <span class="block text-hamers-red-600 hover:text-hamers-yellow-500 xl:inline">Hamers zonder Sikkel</span>
     </h1>
     <p class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
       defenestraties voorbehouden
