--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-white">
+<footer>
   <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
     <p class="text-center text-base text-gray-400">
       <a href="<%= root_url %>">Hamers zonder Sikkel</a> <br>
