--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,7 +17,7 @@
                 <div data-controller="popup-menu">
                   <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page" data-action="click->popup-menu#toggle click@window->popup-menu#close" id="leden-menu" aria-expanded="false" aria-haspopup="true">Menu</a>
 
-                  <div class="absolute z-10 -ml-4 mt-3 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2" data-popup-menu-target="menu">
+                  <div class="absolute z-10 -ml-4 mt-3 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2 opacity-0 hidden" data-popup-menu-target="menu">
                     <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                       <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                         <%= link_to events_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
@@ -198,7 +198,7 @@
                 </button>
               </div>
 
-              <div class="origin-top-right absolute right-0 mt-2 w-screen max-w-md rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" data-popup-menu-target="menu">
+              <div class="origin-top-right absolute right-0 mt-2 w-screen max-w-md rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" data-popup-menu-target="menu">
                 <div class="overflow-hidden">
                   <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                     <%= link_to current_user, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
