--- a/app/views/static_pages/frontpage.html.erb
+++ b/app/views/static_pages/frontpage.html.erb
@@ -14,7 +14,7 @@
         <%= link_to 'Log in', signin_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-hamers-red-600 hover:bg-hamers-red-700 md:py-4 md:text-lg md:px-10" %>
       </div>
       <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-        <%= link_to 'Registreer', activate_account_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-hamers-red-600 bg-white hover:bg-gray-200 hover:text-white md:py-4 md:text-lg md:px-10" %>
+        <%= link_to 'Registreer', activate_account_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-hamers-red-600 bg-white hover:bg-gray-200 md:py-4 md:text-lg md:px-10" %>
       </div>
     </div>
   </div>
