--- a/app/views/static_pages/frontpage.html.erb
+++ b/app/views/static_pages/frontpage.html.erb
@@ -22,24 +22,17 @@
 
 <%= yield %>
 
-<nav class="flex flex-wrap justify-center" aria-label="Footer">
-  <div class="px-5 py-2">
-    <%= link_to public_leden_path, class: "text-base text-gray-500 hover:text-gray-900" do %>
-      Leden
-    <% end %>
-  </div>
+<nav class="flex flex-wrap justify-center">
+  <% pages = { Leden: public_leden_path,
+               Bieren: beers_path,
+               Blog: blogitems_path,
+               Privacyverklaring: privacy_path } %>
 
-  <div class="px-5 py-2">
-    <%= link_to beers_path, class: "text-base text-gray-500 hover:text-gray-900" do %>
-      Bieren
-    <% end %>
-  </div>
-
-  <div class="px-5 py-2">
-    <%= link_to blogitems_path, class: "text-base text-gray-500 hover:text-gray-900" do %>
-      Blog
-    <% end %>
-  </div>
+  <% pages.each do |name, path| %>
+    <div class="px-5 py-2">
+      <%= link_to name, path, class: "text-base text-gray-500 hover:text-gray-900" %>
+    </div>
+  <% end %>
 
   <% PublicPage.where(public: true).each do |pp| %>
     <div class="px-5 py-2">
