--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -1,3 +1,23 @@
-<%= breadcrumb_trail.map do |crumb| %>
-  <% crumb.name %>
-<% end.join(" -> ") %>
+<nav class="flex mt-2 lg:mt-4">
+  <ol role="list" class="flex items-center space-x-4">
+    <% breadcrumb_trail.map do |crumb| %>
+      <li>
+        <div class="flex items-center">
+          <% if crumb.name == 'Home' %>
+            <%= link_to crumb.path, class: 'text-gray-400 hover:text-gray-500' do %>
+              <svg class="flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"/>
+              </svg>
+              <span class="sr-only">Home</span>
+            <% end %>
+          <% else %>
+            <svg class="flex-shrink-0 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
+            </svg>
+            <%= link_to crumb.name, crumb.path, class: 'ml-4 text-sm font-medium text-gray-400 hover:text-gray-500' %>
+          <% end %>
+        </div>
+      </li>
+    <% end %>
+  </ol>
+</nav>
